--- a/google-samples/java/javaDesktop/test-output/emailable-report.html
+++ b/google-samples/java/javaDesktop/test-output/emailable-report.html
@@ -29,64 +29,19 @@ div.shootout {padding:2em;border:3px #4854A8 solid}
 <body>
 <table cellspacing=0 cellpadding=0 class="param">
 <tr><th>Test</th><th class="numi">Methods<br/>Passed</th><th class="numi">Scenarios<br/>Passed</th><th class="numi"># skipped</th><th class="numi"># failed</th><th class="numi">Total<br/>Time</th><th class="numi">Included<br/>Groups</th><th class="numi">Excluded<br/>Groups</th></tr>
-<tr><td style="text-align:left;padding-right:2em">Google Tests</td><td class="numi">1</td><td class="numi">1</td><td class="numi">0</td><td class="numi_attn">2</td><td class="numi">50,0 seconds</td><td class="numi"></td><td class="numi"></td></tr>
+<tr><td style="text-align:left;padding-right:2em">Google Tests</td><td class="numi">3</td><td class="numi">3</td><td class="numi">0</td><td class="numi">0</td><td class="numi">131,6 seconds</td><td class="numi"></td><td class="numi"></td></tr>
 </table>
 <a id="summary"></a>
 <table cellspacing=0 cellpadding=0 class="passed">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
-<tr><th colspan="4">Google Tests &#8212; failed</th></tr>
-<tr class="failedodd"><td rowspan="2">google.GoogleTestsDesktop<td><a href="#m1"><b>GoogleLogin_Invalid</b>  ("should not accept empty email or invalid email")</a></td><td class="numi">1</td><td>1452701269879</td><td class="numi">7685</td></tr><tr class="failedodd"><td><a href="#m2"><b>GoogleComposeEmail</b>  ("should compose email successfully by Gmail1")</a></td><td class="numi">1</td><td>1452701305773</td><td class="numi">21</td></tr>
 <tr><th colspan="4">Google Tests &#8212; passed</th></tr>
-<tr class="passedodd"><td rowspan="1">google.GoogleTestsDesktop<td><a href="#m3"><b>GoogleLogin_Valid</b>  ("should accept valid credentials")</a></td><td class="numi">1</td><td>1452701277565</td><td class="numi">28207</td></tr>
+<tr class="passedodd"><td rowspan="3">google.GoogleTestsDesktop<td><a href="#m1"><b>GoogleLogin_Invalid</b>  ("should not accept empty email or invalid email")</a></td><td class="numi">1</td><td>1454083477452</td><td class="numi">12012</td></tr><tr class="passedodd"><td><a href="#m2"><b>GoogleLogin_Valid</b>  ("should accept valid credentials")</a></td><td class="numi">1</td><td>1454083489465</td><td class="numi">23427</td></tr><tr class="passedodd"><td><a href="#m3"><b>GoogleComposeEmail</b>  ("should compose email successfully by Gmail1")</a></td><td class="numi">1</td><td>1454083512893</td><td class="numi">91768</td></tr>
 </table>
 <h1>Google Tests</h1>
-<a id="m1"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Invalid</h2>
-<div style="padding-left:3em">
-<p>expected:&lt;Please enter your email.&gt; but was:&lt;Vui l?ng nh?p email c?a b?n.&gt;</p>
-org.testng.Assert.fail(Assert.java:89)
-<br/>at org.testng.Assert.failNotEquals(Assert.java:489)
-<br/>at org.testng.Assert.assertEquals(Assert.java:118)
-<br/>at org.testng.Assert.assertEquals(Assert.java:171)
-<br/>at org.testng.Assert.assertEquals(Assert.java:181)
-<br/>at google.GoogleTestsDesktop.GoogleLogin_Invalid(GoogleTestsDesktop.java:75)
-<br/>25 lines not shown
-</div>
+<a id="m1"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Valid</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <a id="m2"></a><h2>google.GoogleTestsDesktop:GoogleComposeEmail</h2>
-<div style="padding-left:3em">
-<p>Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[text()=&apos;COMPOSE&apos;]&quot;}
-Command duration or timeout: 17 milliseconds
-For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
-Build info: version: &apos;2.48.2&apos;, revision: &apos;41bccdd10cf2c0560f637404c2d96164b67d9d67&apos;, time: &apos;2015-10-09 13:08:06&apos;
-System info: host: &apos;JosephThanh-PC&apos;, ip: &apos;192.168.0.101&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_66&apos;
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=43.0.1, platform=WINDOWS, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
-Session ID: c7101acb-c3c9-4b80-a1e1-a692b34c47fd
-*** Element info: {Using=xpath, value=//div[text()=&apos;COMPOSE&apos;]}</p>
-sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-<br/>at sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)
-<br/>at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)
-<br/>at java.lang.reflect.Constructor.newInstance(Unknown Source)
-<br/>at org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)
-<br/>at org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:647)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)
-<br/>at org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:490)
-<br/>at google.GoogleTestsDesktop.GoogleComposeEmail(GoogleTestsDesktop.java:95)
-<br/>25 lines not shown
-<p>Caused by Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[text()=&apos;COMPOSE&apos;]&quot;}
-For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
-Build info: version: &apos;2.48.2&apos;, revision: &apos;41bccdd10cf2c0560f637404c2d96164b67d9d67&apos;, time: &apos;2015-10-09 13:08:06&apos;
-System info: host: &apos;JosephThanh-PC&apos;, ip: &apos;192.168.0.101&apos;, os.name: &apos;Windows 7&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;6.1&apos;, java.version: &apos;1.8.0_66&apos;
-Driver info: driver.version: unknown</p>
-&lt;anonymous class&gt;.FirefoxDriver.prototype.findElementInternal_(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous5405784921082217299webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js:10659)
-<br/>at &lt;anonymous class&gt;.FirefoxDriver.prototype.findElement(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous5405784921082217299webdriver-profile/extensions/fxdriver@googlecode.com/components/driver-component.js:10668)
-<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.executeInternal_/h(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous5405784921082217299webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12534)
-<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.executeInternal_(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous5405784921082217299webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12539)
-<br/>at &lt;anonymous class&gt;.DelayedCommand.prototype.execute/&lt;(file:///C:/Users/JOSEPH~1/AppData/Local/Temp/anonymous5405784921082217299webdriver-profile/extensions/fxdriver@googlecode.com/components/command-processor.js:12481)
-<br/>1 lines not shown
-</div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<a id="m3"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Valid</h2>
+<a id="m3"></a><h2>google.GoogleTestsDesktop:GoogleLogin_Invalid</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
