--- a/google-samples/java/javaDesktop/test-output/index.html
+++ b/google-samples/java/javaDesktop/test-output/index.html
@@ -23,7 +23,7 @@
     <div class="top-banner-root">
       <span class="top-banner-title-font">Test results</span>
       <br/>
-      <span class="top-banner-font-1">1 suite, 2 failed tests</span>
+      <span class="top-banner-font-1">1 suite</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -37,7 +37,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" class="navigator-link" panel-name="suite-Google_Test_Suite">
-              <span class="suite-name border-failed">Google Test Suite</span>
+              <span class="suite-name border-passed">Google Test Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -90,26 +90,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods, 2 failed,   1 passed</span>
-                  </li>
-                  <li>
-                    <span class="method-list-title failed">Failed methods</span>
-                    <span class="show-or-hide-methods failed">
-                      <a href="#" panel-name="suite-Google_Test_Suite" class="hide-methods failed suite-Google_Test_Suite"> (hide)</a> <!-- hide-methods failed suite-Google_Test_Suite -->
-                      <a href="#" panel-name="suite-Google_Test_Suite" class="show-methods failed suite-Google_Test_Suite"> (show)</a> <!-- show-methods failed suite-Google_Test_Suite -->
-                    </span>
-                    <div class="method-list-content failed suite-Google_Test_Suite">
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleComposeEmail">GoogleComposeEmail</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="failed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Invalid">GoogleLogin_Invalid</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                    </div> <!-- method-list-content failed suite-Google_Test_Suite -->
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -118,6 +99,16 @@
                       <a href="#" panel-name="suite-Google_Test_Suite" class="show-methods passed suite-Google_Test_Suite"> (show)</a> <!-- show-methods passed suite-Google_Test_Suite -->
                     </span>
                     <div class="method-list-content passed suite-Google_Test_Suite">
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleComposeEmail">GoogleComposeEmail</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Invalid">GoogleLogin_Invalid</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
                         <a href="#" class="method navigator-link" panel-name="suite-Google_Test_Suite" title="google.GoogleTestsDesktop" hash-for-method="GoogleLogin_Valid">GoogleLogin_Valid</a> <!-- method navigator-link -->
@@ -135,9 +126,9 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Google_Test_Suite" class="panel Google_Test_Suite">
-          <div class="suite-Google_Test_Suite-class-failed">
+          <div class="suite-Google_Test_Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
-              <img src="failed.png"/>
+              <img src="passed.png"/>
               <span class="class-name">google.GoogleTestsDesktop</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -146,16 +137,6 @@
                   <a name="GoogleComposeEmail">
                   </a> <!-- GoogleComposeEmail -->
                   <span class="method-name">GoogleComposeEmail</span>
-                  <div class="stack-trace"><b>"Unable to locate element: {"method":"xpath","selector":"//div[text()='COMPOSE']"}
-Command duration or timeout: 17 milliseconds
-For documentation on this error, please visit: http://seleniumhq.org/exceptions/no_such_element.html
-Build info: version: '2.48.2', revision: '41bccdd10cf2c0560f637404c2d96164b67d9d67', time: '2015-10-09 13:08:06'
-System info: host: 'JosephThanh-PC', ip: '192.168.0.101', os.name: 'Windows 7', os.arch: 'amd64', os.version: '6.1', java.version: '1.8.0_66'
-Driver info: org.openqa.selenium.firefox.FirefoxDriver
-Capabilities [{applicationCacheEnabled=true, rotatable=false, handlesAlerts=true, databaseEnabled=true, version=43.0.1, platform=WINDOWS, nativeEvents=false, acceptSslCerts=true, webStorageEnabled=true, locationContextEnabled=true, browserName=firefox, takesScreenshot=true, javascriptEnabled=true, cssSelectorsEnabled=true}]
-Session ID: c7101acb-c3c9-4b80-a1e1-a692b34c47fd
-*** Element info: {Using=xpath, value=//div[text()='COMPOSE']}"</b><br>sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)<br>sun.reflect.NativeConstructorAccessorImpl.newInstance(Unknown Source)<br>sun.reflect.DelegatingConstructorAccessorImpl.newInstance(Unknown Source)<br>java.lang.reflect.Constructor.newInstance(Unknown Source)<br>org.openqa.selenium.remote.ErrorHandler.createThrowable(ErrorHandler.java:206)<br>org.openqa.selenium.remote.ErrorHandler.throwIfResponseFailed(ErrorHandler.java:158)<br>org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:647)<br>org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:353)<br>org.openqa.selenium.remote.RemoteWebDriver.findElementByXPath(RemoteWebDriver.java:490)<br>google.GoogleTestsDesktop.GoogleComposeEmail(GoogleTestsDesktop.java:95)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:702)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:894)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1219)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:768)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:87)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1188)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1113)<br>org.testng.TestNG.run(TestNG.java:1025)<br>org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:207)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:178)<br>
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
@@ -163,18 +144,8 @@ Session ID: c7101acb-c3c9-4b80-a1e1-a692b34c47fd
                   <a name="GoogleLogin_Invalid">
                   </a> <!-- GoogleLogin_Invalid -->
                   <span class="method-name">GoogleLogin_Invalid</span>
-                  <div class="stack-trace"><b>"expected:<Please enter your email.> but was:<Vui l?ng nh?p email c?a b?n.>"</b><br>org.testng.Assert.fail(Assert.java:89)<br>org.testng.Assert.failNotEquals(Assert.java:489)<br>org.testng.Assert.assertEquals(Assert.java:118)<br>org.testng.Assert.assertEquals(Assert.java:171)<br>org.testng.Assert.assertEquals(Assert.java:181)<br>google.GoogleTestsDesktop.GoogleLogin_Invalid(GoogleTestsDesktop.java:75)<br>sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)<br>sun.reflect.NativeMethodAccessorImpl.invoke(Unknown Source)<br>sun.reflect.DelegatingMethodAccessorImpl.invoke(Unknown Source)<br>java.lang.reflect.Method.invoke(Unknown Source)<br>org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:80)<br>org.testng.internal.Invoker.invokeMethod(Invoker.java:702)<br>org.testng.internal.Invoker.invokeTestMethod(Invoker.java:894)<br>org.testng.internal.Invoker.invokeTestMethods(Invoker.java:1219)<br>org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:127)<br>org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:111)<br>org.testng.TestRunner.privateRun(TestRunner.java:768)<br>org.testng.TestRunner.run(TestRunner.java:617)<br>org.testng.SuiteRunner.runTest(SuiteRunner.java:334)<br>org.testng.SuiteRunner.runSequentially(SuiteRunner.java:329)<br>org.testng.SuiteRunner.privateRun(SuiteRunner.java:291)<br>org.testng.SuiteRunner.run(SuiteRunner.java:240)<br>org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)<br>org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:87)<br>org.testng.TestNG.runSuitesSequentially(TestNG.java:1188)<br>org.testng.TestNG.runSuitesLocally(TestNG.java:1113)<br>org.testng.TestNG.run(TestNG.java:1025)<br>org.testng.remote.RemoteTestNG.run(RemoteTestNG.java:115)<br>org.testng.remote.RemoteTestNG.initAndRun(RemoteTestNG.java:207)<br>org.testng.remote.RemoteTestNG.main(RemoteTestNG.java:178)<br>
-</div> <!-- stack-trace -->
                 </div> <!-- method-content -->
               </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Google_Test_Suite-class-failed -->
-          <div class="suite-Google_Test_Suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
-              <span class="class-name">google.GoogleTestsDesktop</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
                   <a name="GoogleLogin_Valid">
@@ -197,9 +168,9 @@ Session ID: c7101acb-c3c9-4b80-a1e1-a692b34c47fd
   &lt;test name=&quot;Google Tests&quot; preserve-order=&quot;true&quot;&gt;
     &lt;parameter name=&quot;passwordEmailTo&quot; value=&quot;DucThanh1991&quot;/&gt;
     &lt;parameter name=&quot;emailSend&quot; value=&quot;dinhducthanh91@gmail.com&quot;/&gt;
-    &lt;parameter name=&quot;browserName&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browserName&quot; value=&quot;chrome&quot;/&gt;
     &lt;parameter name=&quot;passwordEmailSend&quot; value=&quot;ngoctrinh&quot;/&gt;
-    &lt;parameter name=&quot;emailTo&quot; value=&quot;jslucifer.photography@gmai.com&quot;/&gt;
+    &lt;parameter name=&quot;emailTo&quot; value=&quot;jslucifer.photography@gmail.com&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;google.GoogleTestsDesktop&quot;/&gt;
     &lt;/classes&gt;
@@ -243,22 +214,22 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'GoogleLogin_Valid')
+data.setCell(0, 1, 'GoogleComposeEmail')
 data.setCell(0, 2, 'google.GoogleTestsDesktop')
-data.setCell(0, 3, 28207);
+data.setCell(0, 3, 91768);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'GoogleLogin_Invalid')
+data.setCell(1, 1, 'GoogleLogin_Valid')
 data.setCell(1, 2, 'google.GoogleTestsDesktop')
-data.setCell(1, 3, 7685);
+data.setCell(1, 3, 23427);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'GoogleComposeEmail')
+data.setCell(2, 1, 'GoogleLogin_Invalid')
 data.setCell(2, 2, 'google.GoogleTestsDesktop')
-data.setCell(2, 3, 21);
+data.setCell(2, 3, 12012);
 window.suiteTableData['Google_Test_Suite']= { tableData: data, tableDiv: 'times-div-Google_Test_Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 35 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-Google_Test_Suite">
               </div> <!-- times-div-Google_Test_Suite -->
             </div> <!-- times-div -->
@@ -286,28 +257,24 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">google.GoogleTestsDesktop</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
-                <span class="method-name">Setup(firefox, dinhducthanh91@gmail.com, ngoctrinh, jslucifer.photography@gmai.com, DucThanh1991)</span>
+                <span class="method-name">Setup(chrome, dinhducthanh91@gmail.com, ngoctrinh, jslucifer.photography@gmail.com, DucThanh1991)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">GoogleLogin_Invalid</span>
-                <span class="method-start">13591 ms</span>
+                <span class="method-start">3123 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">GoogleLogin_Valid</span>
-                <span class="method-start">21277 ms</span>
+                <span class="method-start">15136 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <img src="failed.png">
-                </img>
                 <span class="method-name">GoogleComposeEmail</span>
-                <span class="method-start">49485 ms</span>
+                <span class="method-start">38564 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">Teardown</span>
-                <span class="method-start">49511 ms</span>
+                <span class="method-start">130334 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
